--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,11 @@
 spring:
   application:
     name: math-lab
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, info  
+  endpoint:
+    health:
+      show-details: always
